--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -71,8 +71,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install black isort mypy
-        pip install -e .
+        pip install -e ".[dev]"
     
     - name: Check code formatting with Black
       run: black --check --diff gem tests
@@ -101,13 +100,12 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install safety bandit[toml]
-        pip install -e .
+        pip install -e ".[dev]"
     
     - name: Check for known security vulnerabilities
-      run: safety check --json
+      run: safety check
       continue-on-error: true
     
     - name: Run bandit security linter
-      run: bandit -r gem -f json
+      run: bandit -r gem
       continue-on-error: true
