--- a/pyproject.toml
+++ b/pyproject.toml
@@ -46,6 +46,8 @@ dev = [
     "flake8>=6.0.0",
     "mypy>=1.5.0",
     "pre-commit>=3.3.0",
+    "safety>=3.0.0",
+    "bandit[toml]>=1.7.0",
     "jupyter>=1.0.0",
     "notebook>=7.0.0",
 ]
