--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -13,6 +13,10 @@ flake8>=6.0.0
 mypy>=1.5.0
 pre-commit>=3.3.0
 
+# Security
+safety>=3.0.0
+bandit[toml]>=1.7.0
+
 # Documentation and analysis
 jupyter>=1.0.0
 notebook>=7.0.0
